Fix mobile visibility of Works section

--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,6 @@
   color-scheme: dark;
 }
 
-html, body {
-  overflow-x: hidden;
-  width: 100%;
-}
-
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
